<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/zebraicon_without_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_50sdp"
                android:text="@string/zebra"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_403sdp"
            android:src="@drawable/zebra_hompage_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_45sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/_3ssp"
                android:text="@string/zebra_showcase"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:text="@string/some_info_about_the_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_84sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_16sdp">


            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/zebraicon_with_background" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:text="@string/zebra_showcase"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:text="@string/dot"
                    android:textColor="@color/light_subtitle"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_72sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDownload"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@color/button_activated"
                android:elevation="@dimen/_5sdp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/button_activated"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/download"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvInstalling"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_16sdp"
                android:background="@color/white"
                android:elevation="@dimen/_5sdp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical">

                    <ProgressBar
                        android:id="@+id/progressBar2"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_5sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/installing"
                        android:textColor="@color/button_activated"
                        android:textSize="@dimen/_16ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>


    </LinearLayout>

</ScrollView>