<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/black"
        android:gravity="center"
        android:text="Zebra Showcase"
        android:textColor="#F3F6FA"
        android:textSize="@dimen/_16ssp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginBottom="@dimen/_14sdp"
                    android:background="@drawable/homepage_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Zebra Showcase"
                        android:textColor="#1D1E23"
                        android:textSize="@dimen/_16ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="0.03"
                        android:text="Zebra Technologies"
                        android:textColor="#636363"
                        android:textSize="@dimen/_10ssp" />


                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDownload"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_31sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_14sdp"
                    android:background="@color/button_activated"
                    android:elevation="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/button_activated">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/download"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvInstalling"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_31sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_14sdp"
                    android:background="@color/button_activated"
                    android:elevation="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/button_activated">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical">

                        <ProgressBar
                            android:id="@+id/progressBar2"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:indeterminate="true"
                            android:indeterminateTint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/installing"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_154sdp"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:fillViewport="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_77sdp"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/first" />

                    <ImageView
                        android:layout_width="@dimen/_77sdp"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/second" />

                    <ImageView
                        android:layout_width="@dimen/_77sdp"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/third" />

                    <ImageView
                        android:layout_width="@dimen/_77sdp"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/forth" />

                    <ImageView
                        android:layout_width="@dimen/_77sdp"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/fifth" />

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_13sdp"
                android:text="Overview"
                android:textColor="#1D1E23"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:text="@string/overview"
                android:textColor="#1D1E23"
                android:textSize="@dimen/_11ssp" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>